# Pong

./: .buildinfo  .gitignore  CMakeLists.txt  ConfigPong.cmake  Overview.html  README.md  SUMMARY.md  genindex.html  index.html  search.html  searchindex.js
Shaders/: 5.1.transform.glsl  basic.glsl  blending.glsl  blending_v.glsl  blinn.glsl  blinn_F.glsl  blinn_V.glsl  bloom.glsl  bloom_final.glsl  blur.glsl  cutout.glsl  cutout_F.glsl  cutout_V.glsl  example.txt  framebuffer_screen.glsl  landscape.glsl  light_boxF.glsl  normal_visualization.glsl  normal_visualization_f.glsl  normal_visualization_g.glsl  normal_visualization_v.glsl  paint.glsl  paint_V.glsl  pbr_basic.glsl  pbr_basic_V.glsl  point.glsl  point_f.glsl  point_v.glsl  reflect_skybox.glsl  reflect_skybox_v.glsl  refract_skybox.glsl  refract_skybox_f.glsl  refract_skybox_v.glsl  unlit.glsl  unlit_F.glsl  unlit_V.glsl
_sources/: Overview.rst.txt
_static/: documentation_options.js  jquery-3.6.0.js
cmake/: FindBoost.cmake  functions.cmake
content/: plane.asset
dev-diary/: project-management.md
doc/: resources.rst
docs/: index.md  plantuml.bat  requirements.txt
doctrees/: environment.pickle  index.doctree
html/: Overview.html  genindex.html  objects.inv  search.html
include/: DefaultMaterials.h  logger.h  sandbox.h  text_template.h
other/: interesting-reading.md
shaders/: blurF.glsl  cutout_V.glsl  framebuffer_screen_F.glsl  pbr_basic_F.glsl  reflect_skybox_v.glsl  refract_skybox_f.glsl  skybox_f.glsl  skybox_v.glsl  unlit_V.glsl
src/: Actor.cpp  Actor.h  CMakeLists.txt  Collider.cpp  Collider.h  Component.cpp  Component.h  Cubemap.h  DataComparers.h  Level.cpp  Level.h  Lights.h  MapKeyComparer.cpp  MapKeyComparer.h  Material.cpp  Material.h  P_Action.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Shader.h  Shader_s.h  Shape.cpp  Shape.h  Utils.cpp  Utils.h  camera.h  logger.h  main.cpp  main_test.cpp  mesh.h  model.h  pongTypes.h  preflection.cpp  processInput.h  sandbox.h
src/Core/: Actor.cpp  Actor.h  Collider.cpp  Component.cpp  DataComparers.cpp  DataComparers.h  Level.cpp  Render.cpp  Render.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Utils.cpp  Utils.h  actor.cpp  collider.cpp  component.cpp  engine.cpp  level.cpp  map.cpp  processInput.h  scene.cpp  shape.cpp
src/Graphic/: Lights.h  Material.cpp  Material.h  Shader.h
src/Graphic/Shaders/: blending_v.glsl  cutout_F.glsl  cutout_V.glsl  framebuffer_screen_V.glsl  light_boxF.glsl  paint_F.glsl  pbr_basic_V.glsl
src/Levels/: belending_level.cpp  belending_level.h  blending_level.cpp  blending_level.h  load_model_level.h  paint_with_shaders_level.h  test_level.h
src/PReflection/: p_reflection.py
src/Pong/: actor_lib.h  draw_helpers.h  material_lib.h  math_utils.h
src/Pong/actor/: actor.cpp  actor.h
src/Pong/components/: camera_component.h  collision_components.h  component.h  component_hasher.h  graphic_component.h  map_component.h
src/Pong/config/: config.h  config.ini
src/Pong/core/: actor.cpp  actor.h  camera_component.h  collider.cpp  collider.h  collision_components.h  command.cpp  command.h  component.cpp  component.h  core_vals.h  data_comparers.h  edit_shape.h  engine.cpp  engine.h  exceptions.h  geometry_data.h  graphic_component.h  graphic_flags.h  import_model.h  level.cpp  level.h  lights.h  map.cpp  map.h  material.h  mesh_compact.h  outputs.h  parameter_map.h  process_input.h  raytracer.h  reg_id_manager.h  render.h  shader.h  texture.h
src/Pong/core/actor/: actor.cpp  actor.h
src/Pong/core/map/: map.cpp  map.h  map_level.h  map_reg.h  map_sset.h  reg_id_set.h  sparse_set.h  type_reg.h  type_reg_map.h
src/Pong/core/render/: render.h
src/Pong/engine/: asset_inspector.h  engine.cpp  engine.h  engine_registers.h  file_inspector.h  inspector.h  outputs_manager.h
src/Pong/entity/: actor.cpp
src/Pong/file_data/: data_header.h  import_geo.h  p_range.h  reflectable.h  reflectable_demo.h  serial_data.h  serialization.h  serialize_functions.h  serialize_types.h  serializer.h  serializers.h
src/Pong/fileref/: geofile.h  machine.h  serializer.h
src/Pong/map/: map.cpp  map.h  map_level.h  map_logic.h  reg_data.h  reg_id_manager.h
src/Pong/map/deprecated/: map.h
src/Pong/registers/: asset_data_reg.h  buffer_data_reg.h  buffered_reg_data.h  reg_data_controller.h  reg_id.h  sparse_set.h  type_reg_map.h
src/Pong/render/: ogl_renderer.h  render.h  render_nw.h  render_queue.h
src/Pong/serial_data/: descriptors.h  header_data.h  reflectable.h  serial_data.h  serial_functions.h  serial_types.h  serializers.h
src/Pong/serializer/: component_data.h  component_descriptor.h  component_serialize.h  component_serializer.h  data_base.h  descriptor_map.h  descriptors.h  header_data.h  map_descriptor.h  serial_functions.h  serial_types.h  serialize_descriptors.h  serializers.h
src/Pong/shapes/: cube_shape.h  cubemap_shape.h  edit_shape.h  plane_shape.h  sphere_shape.h
src/Utils/: fixed_address_buffer.h  hash_utils.h  logger.h  math_utils.h  reflection_utils.h  shader_parser.h  subclasses_map.h  thread_safe_queue.h  type_conditions.h
src/shaders/: 5.1.transform.glsl  basic.glsl  blinn.glsl  bloomF.glsl  bloom_finalF.glsl  cutout.glsl  light_box.glsl  paint.glsl  paint_V.glsl  pbr_basic.glsl  unlit_F.glsl
src/shaders/camera/: bloom_final.glsl  blur.glsl
src/shaders/core/: bind_camera.glsl  bind_frame_data.glsl  bind_render_data.glsl
src/shaders/operations/: bend.glsl  boolean.glsl  quaternion.glsl  round.glsl
src/shaders/raymarching_shaders/: landscape.glsl  primitives_scene.glsl  voronoi_scene.glsl
src/shaders/render/: map.glsl  render.glsl
src/shaders/shapes/: capsule.glsl  cut_sphere.glsl  plane.glsl  sphere.glsl  torus.glsl
src/shaders/templates/: vertex_shader.template
src/shaders/textures/: checker.glsl  voronoi.glsl
src/utils/: fixed_address_buffer.h  hash_utils.h  type_conditions.h
test/: CMakeLists.txt  base_tests.h  basic_tests.h  filedata_tests.h  gl_test.cpp  include_shader.glsl  main_test.cpp  metap_tests.h  parser_shader.glsl  reg_id_tests.h  test.cpp  type_tests.h
(+169 files in other folders)
